apps/immich/immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v3.2.4 # {"$imagepolicy":"flux-system:immich"}
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: immich-library
        - mountPath: /usr/src/app/upload/thumbs
          name: immich-data
          subPath: thumbs
        - mountPath: /usr/src/app/upload/encoded-video
          name: immich-data
          subPath: encoded-video
        - mountPath: /usr/src/app/upload/profile
          name: immich-data
          subPath: profile
      volumes:
      - name: immich-library
        persistentVolumeClaim:
          claimName: immich-library-pvc
      - name: immich-data
        persistentVolumeClaim:
          claimName: immich-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
      - name: immich-machine-learning
        image: ghcr.io/immich-app/immich-machine-learning:v3.2.2 # {"$imagepolicy":"flux-system:immich-ml"}
        volumeMounts:
        - mountPath: /cache
          name: immich-data
          subPath: ml-cache
      volumes:
      - name: immich-data
        persistentVolumeClaim:
          claimName: immich-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
  - port: 2283
    targetPort: 2283
