apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: immich.erix-homelab.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: immich-server
            port:
              number: 2283
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - immich.erix-homelab.site
